# h-class-robotics

./: README.md
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/open_base/: FrameToFrameRequest.h  FrameToFrameResponse.h  KinematicsForwardRequest.h  KinematicsForwardResponse.h  KinematicsInverseRequest.h  KinematicsInverseResponse.h  Movement.h  MovementBezier.h  MovementGeneric.h  Velocity.h
catkin_ws/devel/include/turtle_control/: kf.h
catkin_ws/devel/include/turtlebot3_fake/: WheelMsg.h
catkin_ws/devel/include/turtlebot_path_tracker/: LocalPathPoints.h
catkin_ws/devel/lib/calibration_demo/: gyroscope  inertial_odom_acc_mag  magnetometer_calibration
catkin_ws/devel/lib/encoder_example/: encoder_example_node
catkin_ws/devel/lib/kinematics_demo/: fk_node  ik_linear  ik_node
catkin_ws/src/encoder_example/: CMakeLists.txt
catkin_ws/src/ftsensor_example/: package.xml
catkin_ws/src/kinematics_demo/: CMakeLists.txt
catkin_ws/src/puma560_moveit_config/: package.xml
cmake_ex/: CMakeLists.txt
cmake_ex/MyMathLib/: CMakeLists.txt  mysqrt.cpp  mysqrt.h  mysquare.h
cmake_ex/src/: main.cpp
fk_ex/: ex1.out  ex3.out
publisher_ex/catkin_ws/devel/: .rosinstall
week-1/cmake_ex/MyMathLib/: mysquare.cpp
week-1/publisher_ex/: .bash
week-2/catkin_ws/devel/: .catkin  setup.sh
week-2/fk_ex/: dh.hpp  ex1.cpp  ex1poe.cpp  ex1poe.out  ex2.cpp  ex2.out  ex3.cpp  matrix_multi_eigen_ex.cpp  matrix_multi_eigen_ex.out  matrix_multi_ex.cpp  matrix_multi_ex.out  poe.hpp
week-3/catkin_ws/devel/: .catkin  setup.sh
(+203 files in other folders)
